--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,78 +1,76 @@
 <div class="col-md-6">
-    <div class="section-title mb-3">Customer Details</div>
+    <div class="section-title mb-2">Customer Details</div>
 
-    <div class="card border-0">
-        <div class="card-body p-0">
+    <!-- Header Row (ONLY ONCE) -->
+    <div class="row fw-bold border-bottom pb-1 mb-2">
+        <div class="col-1">#</div>
+        <div class="col-5">Customer Number</div>
+        <div class="col-5">Customer Name</div>
+        <div class="col-1"></div>
+    </div>
 
-            <!-- Customer Rows -->
-            <div v-for="(line, lineIndex) in customer_lines" :key="lineIndex"
-                 class="row g-2 align-items-end mb-2 border rounded p-2 position-relative">
+    <!-- Customer Rows -->
+    <div v-for="(line, index) in customer_lines"
+         :key="index"
+         class="row align-items-center g-2 mb-2">
 
-                <!-- Row Number -->
-                <div class="col-auto">
-                    <span class="fw-semibold"># [[ lineIndex + 1 ]]</span>
-                </div>
-
-                {% for field in aif_customer_line_form.visible_fields %}
-
-                    <!-- Customer Name with Autocomplete -->
-                    {% if field.name == "oracle_cust_name" %}
-                    <div class="col-md-5 position-relative">
-                        <label class="form-label fw-semibold">{{ field.label }}</label>
-                        <input type="text"
-                               class="form-control form-control-sm"
-                               v-model="line.oracle_cust_name"
-                               @change="searchCustomerName(lineIndex, $event.target.value)"
-                               placeholder="Type customer name..."
-                               autocomplete="off" />
-
-                        <!-- Autocomplete Dropdown -->
-                        <ul v-if="customer_name_search_results[lineIndex]?.length"
-                            class="list-group position-absolute w-100 shadow-sm"
-                            style="z-index: 1000; max-height: 200px; overflow-y:auto;">
-                            <li v-for="cust in customer_name_search_results[lineIndex]"
-                                :key="cust.party_number"
-                                class="list-group-item list-group-item-action"
-                                @click="selectCustomerName(lineIndex, cust)">
-                                [[ cust.label ]]
-                            </li>
-                        </ul>
-                    </div>
-
-                    {% else %}
-                    <!-- Other Fields -->
-                    <div class="col-md-4">
-                        <label class="form-label fw-semibold">{{ field.label }}</label>
-                        {{ field|add_attrs:"class=form-control form-control-sm; :index=lineIndex; v-model=customer_lines; @change=handle_customer_line_change(customer_lines,lineIndex,$event); @paste.prevent=paste_customer_from_excel(customer_lines,lineIndex,$event);" }}
-                        {% if field.help_text %}
-                            <div class="form-text">{{ field.help_text|safe }}</div>
-                        {% endif %}
-                    </div>
-                    {% endif %}
-
-                {% endfor %}
-
-                <!-- Delete Button -->
-                <div class="col-auto">
-                    <button type="button"
-                            class="btn btn-sm btn-outline-danger"
-                            @click="delete_customer_line(line)">
-                        <i class="bi bi-x-lg"></i>
-                    </button>
-                </div>
-
-            </div>
-
-            <!-- Add Customer Button -->
-            <div v-if="!isAllNSOMarketEnabled" class="mt-2">
-                <button type="button" class="btn btn-sm btn-primary" @click="add_customer_line()">
-                    <i class="bi bi-plus-lg me-1"></i> Add Customer
-                </button>
-            </div>
-
+        <!-- Row Number -->
+        <div class="col-1">
+            [[ index + 1 ]]
         </div>
+
+        <!-- Customer Number -->
+        <div class="col-5">
+            <input type="text"
+                   class="form-control form-control-sm"
+                   v-model="line.oracle_cust_number"
+                   @change="handle_customer_change(customer_lines, index, line.oracle_cust_number)"
+                   placeholder="Enter customer number">
+        </div>
+
+        <!-- Customer Name with Autocomplete -->
+        <div class="col-5 position-relative">
+            <input type="text"
+                   class="form-control form-control-sm"
+                   v-model="line.oracle_cust_name"
+                   @input="searchCustomerName(index, line.oracle_cust_name)"
+                   placeholder="Search customer name">
+
+            <ul v-if="customer_name_search_results[index]?.length"
+                class="list-group position-absolute w-100 shadow-sm"
+                style="z-index: 1000; max-height: 200px; overflow-y: auto;">
+
+                <li v-for="cust in customer_name_search_results[index]"
+                    :key="cust.party_number"
+                    class="list-group-item list-group-item-action"
+                    @click="selectCustomerName(index, cust)">
+                    [[ cust.label ]]
+                </li>
+            </ul>
+        </div>
+
+        <!-- Delete Button -->
+        <div class="col-1 text-end">
+            <button type="button"
+                    class="btn btn-sm btn-outline-danger"
+                    @click="delete_customer_line(line)">
+                <i class="bi bi-x-lg"></i>
+            </button>
+        </div>
+
+    </div>
+
+    <!-- Add Customer Button -->
+    <div class="mt-2">
+        <button v-if="!isAllNSOMarketEnabled"
+                type="button"
+                class="btn btn-sm btn-primary"
+                @click="add_customer_line()">
+            <i class="bi bi-plus-lg me-1"></i> Add Customer
+        </button>
     </div>
 </div>
+
 
 
 
