--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,6 +1,7 @@
 <div class="col-md-6">
     <div class="section-title mb-2">Customer Details</div>
 
+    <!-- Header -->
     <div class="row fw-bold border-bottom pb-1 mb-2">
         <div class="col-1">#</div>
         <div class="col-5">Customer Number</div>
@@ -9,38 +10,52 @@
     </div>
 
     <div class="position-relative">
-        <!-- SCROLL ONLY HERE -->
-        <div style="max-height: 260px; overflow-y: auto; padding-right: 4px;">
+
+        <!-- SCROLL AREA (Bootstrap utility) -->
+        <div class="overflow-auto pe-1" style="max-height: 260px;">
+
+            <!-- Loading Overlay -->
+            <div v-if="isLoading"
+                class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-white bg-opacity-75"
+                style="z-index: 10;">
+                <div class="spinner-border text-primary" role="status"></div>
+            </div>
 
             <div v-for="(line, index) in customer_lines"
-                 :key="index"
-                 class="row align-items-center g-2 mb-2">
+                :key="index"
+                class="row align-items-center g-2 mb-2">
 
                 <div class="col-1">[[ index + 1 ]]</div>
 
                 <div class="col-5">
                     <input type="text"
-                           class="form-control form-control-sm"
-                           v-model="line.oracle_cust_number"
-                           @change="handle_customer_change(customer_lines, index, line.oracle_cust_number)">
+                        class="form-control form-control-sm"
+                        v-model="line.oracle_cust_number"
+                        @change="handle_customer_change(customer_lines, index, line.oracle_cust_number)">
                 </div>
 
-                <div class="col-5 position-relative" style="overflow: visible;">
-                    <input type="text"
-                           class="form-control form-control-sm"
-                           v-model="line.oracle_cust_name"
-                           @input="searchCustomerName(index, line.oracle_cust_name)">
+                <!-- IMPORTANT FIX -->
+                <div class="col-5 position-static">
+                    <div class="position-relative">
+                        <input type="text"
+                            class="form-control form-control-sm"
+                            v-model="line.oracle_cust_name"
+                            @input="searchCustomerName(index, line.oracle_cust_name)"
+                            autocomplete="off">
 
-                    <ul v-if="customer_name_search_results[index]?.length"
-                        class="list-group position-absolute w-100 shadow"
-                        style="z-index: 1055; max-height: 200px; overflow-y: auto;">
-                        <li v-for="cust in customer_name_search_results[index]"
-                            :key="cust.party_number"
-                            class="list-group-item list-group-item-action"
-                            @click="selectCustomerName(index, cust)">
-                            [[ cust.label ]]
-                        </li>
-                    </ul>
+                        <!-- DROPDOWN -->
+                        <ul v-if="customer_name_search_results[index]?.length"
+                            class="list-group position-absolute w-100 shadow"
+                            style="z-index: 1055; max-height: 200px; overflow-y: auto;">
+
+                            <li v-for="cust in customer_name_search_results[index]"
+                                :key="cust.party_number"
+                                class="list-group-item list-group-item-action"
+                                @click="selectCustomerName(index, cust)">
+                                [[ cust.label ]]
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="col-1 text-end">
@@ -52,9 +67,9 @@
                 </div>
 
             </div>
+        </div>
 
-        </div> <!-- END SCROLL AREA -->
-
+        <!-- Add button OUTSIDE scroll -->
         <div class="mt-2">
             <button v-if="!isAllNSOMarketEnabled"
                     type="button"
