--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,3 +1,32 @@
+<div class="col-5">
+    <!-- Search Input -->
+    <input type="text"
+        class="form-control form-control-sm"
+        v-model="line.oracle_cust_name"
+        @input="searchCustomerName(index, line.oracle_cust_name)"
+        placeholder="Search customer name..."
+        autocomplete="off">
+
+    <!-- SELECT DROPDOWN (not floating, so never hides) -->
+    <select v-if="customer_name_search_results[index]?.length"
+        class="form-select form-select-sm mt-1"
+        size="5"
+        @change="selectCustomerFromDropdown(index, $event)">
+
+        <option disabled selected value="">Select customer</option>
+
+        <option v-for="cust in customer_name_search_results[index]"
+                :key="cust.party_number"
+                :value="cust.party_number">
+            [[ cust.label ]]
+        </option>
+    </select>
+</div>
+
+
+
+
+
 <div class="col-md-6">
     <div class="section-title mb-2">Customer Details</div>
 
