--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -520,3 +520,40 @@
     </div>
 </div>
 
+
+
+
+<select v-if="customer_name_search_results[index]?.length"
+        class="form-select form-select-sm mt-1"
+        size="5"
+        @change="selectCustomerFromDropdown(index, $event)">
+
+    <option disabled value="">Select customer</option>
+
+    <option v-for="cust in customer_name_search_results[index]"
+            :key="cust.party_number"
+            :value="cust.party_number + '||' + cust.customer_name">
+        [[ cust.label ]]
+    </option>
+</select>
+
+selectCustomerFromDropdown(index, event) {
+    const value = event.target.value;
+    if (!value) return;
+
+    const [party_number, customer_name] = value.split("||");
+
+    const line = this.customer_lines[index];
+    if (!line) return;
+
+    // ✅ Fill both fields in SAME ROW
+    line.oracle_cust_number = party_number;
+    line.oracle_cust_name = customer_name;
+
+    // ✅ Clear results (hide dropdown)
+    this.customer_name_search_results[index] = [];
+
+    // Reset select so it can be used again
+    event.target.value = "";
+}
+
