--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,4 +1,37 @@
 <div class="col-5 position-relative">
+
+    <!-- Django rendered input -->
+    {{ field|add_attrs:":index=index; v-model=customer_lines; @change=searchCustomerName(index, $event.target.value)" }}
+
+    <!-- Floating SELECT dropdown -->
+    <select v-if="customer_name_search_results[index]?.length"
+            class="form-select form-select-sm position-absolute w-100 shadow"
+            size="5"
+            style="top:100%; z-index:3000;"
+            @change="selectCustomerName(index, $event.target.value)">
+
+        <option disabled selected>Select customer</option>
+
+        <option v-for="cust in customer_name_search_results[index]"
+                :key="cust.party_number"
+                :value="cust.party_number + '||' + cust.customer_name">
+            [[ cust.label ]]
+        </option>
+    </select>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="col-5 position-relative">
     <!-- Search box -->
     <input type="text"
            class="form-control form-control-sm"
