--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,3 +1,82 @@
+<div class="col-md-6">
+    <div class="section-title mb-2">Customer Details</div>
+
+    <!-- Header -->
+    <div class="row fw-bold border-bottom pb-1 mb-2">
+        <div class="col-1">#</div>
+        <div class="col-5">Customer Number</div>
+        <div class="col-5">Customer Name</div>
+        <div class="col-1"></div>
+    </div>
+
+    <div class="overflow-auto pe-1 position-relative" style="max-height: 260px;">
+
+        <div v-for="(line, index) in customer_lines"
+             :key="index"
+             class="row align-items-start g-2 mb-2">
+
+            <div class="col-1 pt-2">[[ index + 1 ]]</div>
+
+            <!-- Django Field Rendering -->
+            {% for field in aif_customer_line_form.visible_fields %}
+
+                {% if field.name == "oracle_cust_number" %}
+                <div class="col-5">
+                    {{ field|add_attrs:":index=index; v-model=customer_lines; @change=handle_customer_change(customer_lines,index,$event.target.value)" }}
+                </div>
+                {% endif %}
+
+                {% if field.name == "oracle_cust_name" %}
+                <div class="col-5 position-relative">
+                    {{ field|add_attrs:":index=index; v-model=customer_lines; @input=searchCustomerName(index,$event.target.value)" }}
+
+                    <!-- SELECT DROPDOWN -->
+                    <select v-if="customer_name_search_results[index]?.length"
+                            class="form-select form-select-sm position-absolute w-100 shadow"
+                            size="5"
+                            style="top:100%; z-index:3000;"
+                            @change="selectCustomerName(index, $event.target.value)">
+
+                        <option disabled selected>Select customer</option>
+
+                        <option v-for="cust in customer_name_search_results[index]"
+                                :key="cust.party_number"
+                                :value="cust.party_number + '||' + cust.customer_name">
+                            [[ cust.label ]]
+                        </option>
+                    </select>
+                </div>
+                {% endif %}
+
+            {% endfor %}
+
+            <div class="col-1 text-end pt-1">
+                <button type="button"
+                        class="btn btn-sm btn-outline-danger"
+                        @click="delete_customer_line(line)">
+                    <i class="bi bi-x-lg"></i>
+                </button>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="mt-2">
+        <button v-if="!isAllNSOMarketEnabled"
+                type="button"
+                class="btn btn-sm btn-primary"
+                @click="add_customer_line()">
+            <i class="bi bi-plus-lg me-1"></i>
+        </button>
+    </div>
+</div>
+
+
+
+
+
+
+
 class AifCustomerLineForm(EnhancedModelForm):
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
