--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,3 +1,15 @@
+<!-- Scroll Area -->
+<div class="pe-1" style="max-height: 300px; overflow-y: auto; overflow-x: visible;">
+
+    <select v-if="customer_name_search_results[index]?.length"
+        class="form-select form-select-sm position-absolute w-100 shadow"
+        size="5"
+        style="top:100%; left:0; z-index:1055;"
+        @change="selectCustomerName(index, $event.target.value)">
+
+
+
+
 <div class="col-md-6">
     <div class="section-title mb-2">Customer Details</div>
 
