--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,3 +1,40 @@
+<div class="dropdown w-100">
+    <input
+        type="text"
+        class="form-control form-control-sm dropdown-toggle"
+        data-bs-toggle="dropdown"
+        aria-expanded="true"
+        v-model="line.oracle_cust_name"
+        @input="searchCustomerName(lineIndex, $event.target.value)"
+        placeholder="Type customer name..."
+        autocomplete="off"
+    />
+
+    <ul v-if="customer_name_search_results[lineIndex]?.length"
+        class="dropdown-menu show w-100 shadow-sm"
+        style="max-height: 220px; overflow-y: auto;">
+
+        <li v-for="cust in customer_name_search_results[lineIndex]"
+            :key="cust.party_number">
+            <a href="#"
+               class="dropdown-item small"
+               @click.prevent="selectCustomerName(lineIndex, cust)">
+                [[ cust.label ]]
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 <!-- Scroll Area -->
 <!-- Scroll Area -->
 <div class="pe-1" style="max-height: 300px; overflow-y: auto; overflow-x: visible;">
