--- a/aif_app_uifix.html
+++ b/aif_app_uifix.html
@@ -1,8 +1,8 @@
 {{ field|add_attrs:":index=lineIndex; 
                   v-model=customer_lines; 
-                  :data-customer-number=line.oracle_cust_number;
-                  @change=handle_customer_line_change(customer_lines,lineIndex,$event);
+                  @input=searchCustomerName(lineIndex,$event.target.value);
                   @paste.prevent=paste_customer_from_excel(customer_lines,lineIndex,$event);" }}
+
 
 
 
