--- a/newaif.html
+++ b/newaif.html
@@ -88,3 +88,68 @@
         <i class="bi bi-plus-lg me-1"></i> Add Customer
     </button>
 </div>
+
+
+
+
+
+
+
+
+<div class="overflow-auto pe-1" style="max-height: 280px;">
+
+    <template v-for="(line, lineIndex) in customer_lines" :key="lineIndex">
+
+        <form class="row align-items-start g-2 mb-2"
+              :id="'custlineform' + lineIndex"
+              @submit.prevent="">
+
+            <!-- Row Number -->
+            <div class="col-1 pt-2 small text-muted">
+                [[ lineIndex + 1 ]]
+            </div>
+
+            {% for field in aif_customer_line_form.visible_fields %}
+
+                <!-- Customer Number -->
+                {% if field.name == "oracle_cust_number" %}
+                <div class="col-5">
+                    {{ field|add_attrs:":index=lineIndex;
+                                        v-model=customer_lines;
+                                        @change=handle_customer_change(customer_lines,lineIndex,$event.target.value)" }}
+                </div>
+                {% endif %}
+
+                <!-- Customer Name -->
+                {% if field.name == "oracle_cust_name" %}
+                <div class="col-5 position-relative">
+
+                    {{ field|add_attrs:":index=lineIndex;
+                                        v-model=customer_lines;
+                                        @input=searchCustomerName(lineIndex,$event.target.value);
+                                        autocomplete=off" }}
+
+                    <!-- Dropdown -->
+                    <ul v-if="customer_name_search_results[lineIndex]?.length"
+                        class="dropdown-menu show w-100 shadow-sm mt-1"
+                        style="max-height:220px; overflow-y:auto;">
+
+                        <li v-for="cust in customer_name_search_results[lineIndex]"
+                            :key="cust.party_number">
+                            <a href="#"
+                               class="dropdown-item small"
+                               @click.prevent="selectCustomerName(lineIndex, cust)">
+                                [[ cust.label ]]
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+                {% endif %}
+
+            {% endfor %}
+
+        </form>
+    </template>
+</div>
+
