--- a/newaif.html
+++ b/newaif.html
@@ -12,3 +12,29 @@
     </li>
 
 </ul>
+
+
+=== Promotion Basics ===
+Promotion Campaign
+Promotion Category
+Promotion Activity
+
+=== Market Scope ===
+NSO
+[ ] Apply to All NSO Market
+
+=== Timeline ===
+Start Date     End Date
+
+=== Financial Info ===
+Local Currency (auto)
+
+=== Special Handling ===
+AIF To Be Cancelled
+
+=== Notifications ===
+Email CC
+
+=== Attachments ===
+File Upload
+(File will be uploaded to SharePoint)
