--- a/newaif.html
+++ b/newaif.html
@@ -38,3 +38,14 @@ Email CC
 === Attachments ===
 File Upload
 (File will be uploaded to SharePoint)
+
+
+
+<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+     stroke-linecap="round" stroke-linejoin="round">
+  <rect x="9" y="2" width="6" height="4" rx="1"></rect>
+  <path d="M5 6h14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"></path>
+  <line x1="9" y1="12" x2="15" y2="12"></line>
+  <line x1="9" y1="16" x2="13" y2="16"></line>
+</svg>
+
