--- a/newaif.html
+++ b/newaif.html
@@ -1,3 +1,21 @@
+<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+     stroke-linecap="round" stroke-linejoin="round">
+  <circle cx="12" cy="12" r="9"></circle>
+  <polyline points="12 7 12 12 15
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <ul v-if="customer_name_search_results[lineIndex]?.length"
     class="list-group mt-1"
     style="max-height: 220px; overflow-y: auto;">
