--- a/newaif.html
+++ b/newaif.html
@@ -1,3 +1,88 @@
+<div class="card-body">
+    <h5 class="card-title">Promotion Line Details</h5>
+
+    <!-- Promotion Value -->
+    <div class="row mb-3">
+        <div class="col-md-4">
+            <label class="form-label fw-semibold">Promotion Value</label>
+            <input type="text"
+                   class="form-control form-control-sm"
+                   :value="promoValue"
+                   disabled>
+        </div>
+    </div>
+
+    <!-- Table -->
+    <div class="table-responsive">
+        <table class="table table-sm table-bordered align-middle">
+            
+            <!-- Header -->
+            <thead class="table-light text-center small fw-normal">
+                <tr>
+                    <th style="width:50px;">#</th>
+
+                    {% for field in aif_line_form.visible_fields %}
+                        <th>
+                            {{ field.label }}
+                            {% if field.help_text %}
+                                <div class="form-text small text-muted">
+                                    {{ field.help_text|safe }}
+                                </div>
+                            {% endif %}
+                        </th>
+                    {% endfor %}
+
+                    <!-- 🔥 New Actions Column -->
+                    <th style="width:110px;">Actions</th>
+                </tr>
+            </thead>
+
+            <!-- Body -->
+            <tbody>
+                <template v-for="line in lines" :key="line.id || lines.indexOf(line)">
+                    <tr>
+                        <td class="text-center">
+                            [[ lines.indexOf(line) + 1 ]]
+                        </td>
+
+                        {% for field in aif_line_form.visible_fields %}
+                        <td>
+                            {{ field|add_attrs:":index=lines.indexOf(line); v-model=lines; @change=handle_line_change(lines, lines.indexOf(line),$event); @paste.prevent=paste_mercury_from_excel(lines,lines.indexOf(line), $event);" }}
+                        </td>
+                        {% endfor %}
+
+                        <!-- 🔥 Actions Buttons -->
+                        <td class="text-center">
+                            <div class="btn-group btn-group-sm">
+                                <button type="button"
+                                        class="btn btn-outline-primary"
+                                        @click="copy_line(line)">
+                                    <i class="bi bi-copy"></i>
+                                </button>
+                                <button type="button"
+                                        class="btn btn-outline-danger"
+                                        @click="delete_line(line)">
+                                    <i class="bi bi-x-lg"></i>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </template>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Add Line Button -->
+    <button type="button"
+            class="btn btn-sm btn-primary mt-2"
+            @click="add_line()">
+        <i class="bi bi-plus-lg me-1"></i> Add Line
+    </button>
+</div>
+
+
+
+
 <div class="col-md-6">
     <form id="aif_form" @submit.prevent="">
         <div class="section-title mb-3">Promotion Details</div>
