--- a/newaif.html
+++ b/newaif.html
@@ -1,3 +1,17 @@
+<div class="row align-items-center mb-3">
+    <div class="col-md-3">
+        <label class="form-label small text-muted mb-0">Promotion Value</label>
+    </div>
+    <div class="col-md-6">
+        <input type="text"
+               class="form-control form-control-sm"
+               :value="promoValue"
+               disabled>
+    </div>
+</div>
+
+
+
 <div class="card-body">
     <h5 class="mb-3">Promotion Line Details</h5>
 
